# media-mover

./: .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
src/mediasorter/: __init__.py  __main__.py  cli.py  config.py  logging.py
src/mediasorter/daemon/: health.py  scheduler.py
src/mediasorter/db/: engine.py  models.py
src/mediasorter/matching/: ai_fallback.py  scorer.py  tmdb_client.py
src/mediasorter/moving/: executor.py  planner.py
src/mediasorter/notifications/: upcoming.py  webhook.py
src/mediasorter/parsing/: guessit_wrapper.py  normalize.py
src/mediasorter/tui/: review.py
src/mediasorter/utils/: fs.py  rate_limit.py
tests/: test_matching.py  test_moving.py  test_parsing.py  test_planner.py
tests/fixtures/: filenames.json
