[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mediasorter"
version = "0.1.0"
description = "Organize a Jellyfin media library into canonical folder structure using TMDB metadata"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "typer>=0.12,<1",
    "rich>=13",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "sqlmodel>=0.0.16",
    "guessit>=3.8,<4",
    "tmdbv3api>=1.9,<2",
    "httpx>=0.27,<1",
    "structlog>=24",
    "apscheduler>=3.10,<4",
    "rapidfuzz>=3.6",
    "pyyaml>=6",
    "fastapi>=0.111",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
mediasorter = "mediasorter.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mediasorter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
